Added direction 2 text + began further styling
Still using common for styling, trying to set the readability + font size + line height first

--- a/common.css
+++ b/common.css
@@ -1,10 +1,17 @@
 :root{
     --bg-color: papayawhip;
     --fg-color: tomato;
+    font-size: 2rem;
+	line-height: 120%;
+	--spacing: 2rem;
 }
 
 body {
-    padding:2.5rem;
+    padding: var(--spacing);
     background-color: var(--bg-color);
     color: var(--fg-color);
+}
+
+body p {
+    margin-block: var(--spacing);
 }
