--- a/common.css
+++ b/common.css
@@ -1,9 +1,9 @@
 :root{
-    --bg-color: papayawhip;
-    --fg-color: tomato;
-    font-size: 2rem;
-	line-height: 120%;
-	--spacing: 2rem;
+    --bg-color: rgb(246, 246, 246);
+    --fg-color: black;
+    font-size: 3rem;
+	line-height: 1.5rem;
+	--spacing: 1rem;
 }
 
 body {
@@ -14,4 +14,5 @@ body {
 
 body p {
     margin-block: var(--spacing);
+    text-wrap: prett;
 }
