--- a/common.css
+++ b/common.css
@@ -1,8 +1,9 @@
 :root{
     --bg-color: rgb(246, 246, 246);
     --fg-color: black;
-    font-size: 3rem;
+    font-size: 1rem;
 	line-height: 1.5rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--spacing: 1rem;
 }
 
@@ -14,5 +15,4 @@ body {
 
 body p {
     margin-block: var(--spacing);
-    text-wrap: prett;
 }
