--- a/common.css
+++ b/common.css
@@ -1,5 +1,5 @@
 :root{
-    --bg-color: rgb(246, 246, 246);
+    --bg-color: rgb(255, 245, 152);
     --fg-color: black;
     font-size: 1.5rem;
 	line-height: 1.5rem;
@@ -9,6 +9,5 @@
 
 body {
     padding: var(--spacing);
-    font-size: 100%;
-    line-height: 100%;
+    background-color: var(--bg-color);
 }
