--- a/common.css
+++ b/common.css
@@ -7,6 +7,10 @@
 	--spacing: 1rem;
 }
 
+nav ol {
+    display: flex;
+    flex-direction: row;
+}
 body {
     padding: var(--spacing);
     background-color: var(--bg-color);
