--- a/common.css
+++ b/common.css
@@ -7,20 +7,23 @@
 	--spacing: 1rem;
 }
 
-nav ol {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-}
-
-ol li{
-    margin-inline: var(--spacing);
-}
-body {
+body{
     padding: calc(var(--spacing)/1.5);
     background-color: var(--bg-color);
 }
 
 body p{
     margin-block: var(--spacing);
+    text-wrap: pretty;
+}
+
+nav ol{
+    display: flex;
+    justify-content: space-between;
+    gap: 0;
+    width: 100%;
+    background-color: #fdf9e6;
+    color: #0f1617;
+    font-size: 50%;
+    padding: 0;
 }
