--- a/direction-1/style.css
+++ b/direction-1/style.css
@@ -1,17 +1,18 @@
-@font-face {
+/* @font-face {
     font-family: "Saint";
     src: url("binding/Saint-Regular.woff2") format('woff2'),
         url("bindig/Saint-Regular.woff") format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-}
+} */
 
 h1{
     padding-block-start: calc(var(--spacing)*1.5);
     margin-block: calc(var(--spacing)*2);
     line-height: 100%;
-    font-family: 'Saint';
+    font-family: "Jersey 10", sans-serif;
+    font-weight: 400;
     font-size: 600%;
     text-align: center;
 }
