--- a/direction-1/style.css
+++ b/direction-1/style.css
@@ -7,6 +7,8 @@
     font-display: swap;
 } */
 
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
+
 h1{
     padding-block-start: calc(var(--spacing)*1.5);
     margin-block: calc(var(--spacing)*2);
@@ -15,4 +17,5 @@ h1{
     font-weight: 400;
     font-size: 600%;
     text-align: center;
+    transform: skew(30deg);
 }
