--- a/direction-2/style.css
+++ b/direction-2/style.css
@@ -1,4 +1,4 @@
-.white-box {
+/* .white-box {
   background: #cdc6b6;
   display: flex;
   flex-direction: column;
@@ -7,12 +7,43 @@
   border-radius: 14px;
   width: fit-content;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-}
+} */
 
-.icon-placeholder {
+/* .icon-placeholder {
   width: 45px;
   height: 45px;
   background: #d9d9d9;
   border-radius: 8px;
   margin-bottom: 16px;
+} */
+
+.root{
+    height:100%
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url("../image.jpeg");
+  /* background-size: cover; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  position: relative;
+  width: 1rem;
+  height:1rem;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 50%,
+    rgba(0, 0, 0, 0.9) 100%
+  );
 }
