--- a/direction-2/style.css
+++ b/direction-2/style.css
@@ -25,13 +25,11 @@ body {
   margin: 0;
   padding: 0;
   background-image: url("../image.jpeg");
-  /* background-size: cover; */
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   position: relative;
-  width: 1rem;
-  height:1rem;
 }
 
 body::before {
