--- a/direction-1/style.css
+++ b/direction-1/style.css
@@ -8,6 +8,7 @@
 } */
 
 @import url('https://fonts.googleapis.com/css2?family=Road+Rage&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 h1 {
     padding-block-start: calc(var(--spacing)*1.5);
@@ -21,5 +22,11 @@ h1 {
     font-style: normal;
     color: rgb(41, 207, 41);
     text-align: center;
+}
+
+body {
+    font-family: "Barlow Semi Condensed", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
 
