--- a/direction-1/style.css
+++ b/direction-1/style.css
@@ -28,5 +28,6 @@ body {
     font-family: "Barlow Semi Condensed", sans-serif;
     font-weight: 300;
     font-style: normal;
+    font-size: 125%;
 }
 
