--- a/common.css
+++ b/common.css
@@ -1,29 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap');
+
 :root{
     --bg-color: rgb(232, 232, 232);
     --fg-color: black;
-    font-size: 1rem;
+    font-size: 2rem;
 	line-height: 2rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--spacing: 1rem;
 }
 
-body{
-    padding: calc(var(--spacing)/1.5);
-    background-color: var(--bg-color);
-}
-
-body p{
-    margin-block: var(--spacing);
-    text-wrap: pretty;
-}
-
 nav ol{
     display: flex;
-    justify-content: space-between;
-    gap: 0;
-    width: 100%;
-    background-color: #fdf9e6;
-    color: #0f1617;
-    font-size: 80%;
-    padding: 0;
+    justify-content: space-evenly;
+    block-size: 7vh;
+    inline-size: 100vw;
+    background-color: #ff4fa1;
+    color: #f5f5f5;
+    font-family: "Instrument Sans", sans-serif;
+    font-size: 70%;
+    font-weight: 500;
+    letter-spacing: -0.01rem;
+    text-transform: uppercase;
+
 }
